syntax = "proto3";

package io.restorecommerce.oauth;

import "io/restorecommerce/auth.proto";
import "io/restorecommerce/user.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";
import "google/protobuf/empty.proto";

service OAuthService {
  rpc GenerateLinks(google.protobuf.Empty) returns (GenerateLinksResponse)  {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc AvailableServices(google.protobuf.Empty) returns (ServicesResponse){
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc ExchangeCode(ExchangeCodeRequest) returns (ExchangeCodeResponse);
}

message ServicesResponse {
  repeated string services = 1;
}

message GenerateLinksResponse {
  map<string, string> links = 1;
}

message ExchangeCodeRequest {
  optional string service = 1;
  optional string code = 2;
  optional string state = 3;
}

message ExchangeCodeResponse {
  optional io.restorecommerce.user.UserResponse user = 1;
  optional string email = 2;
  optional io.restorecommerce.auth.Tokens token = 3;
}

message GetTokenRequest {
  optional io.restorecommerce.auth.Subject subject = 1;
  optional string service = 2;
}

message GetTokenResponse {
  optional io.restorecommerce.status.Status status = 1;
  optional string token = 2;
}
